--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div>
     <p><button id="submit0">Submit</button></p>
 </div>
+<h1 id="access-allowed"></h1>
 <pre id="content"></pre>
 
 <script src="./test/xhr.js" type="module"></script>
